since version 1.9.2
 * allow PROJ_DIR env var to control location of proj data (issue 40).
1.9.2 (svn revision 301)
 * updated proj4 src to 4.8.0 - includes two new map projections (natearth and
   isea).
1.9.1 (svn revision 285)
 * restore compatibility with python 2.4/2.5, which was broken by the addition
   of the geographiclib geodesic module (issue 36).
1.9.0 (svn revision 282)
 * use pure python geographiclib for geodesic computation codes instead of
 proj4.
 * don't use global variable pj_errno for return codes, use pj_ctx_get_errno
   instead.
 * use new projCtx structure for thread safety in proj lib.
 * update C source and data from proj4 svn (r2140).
 * add pj_list and pj_ellps module level variables (a dict mapping short
   names to longer descriptions, e.g. 
   pyproj.pj_list['aea'] = 'Albers Equal Area').
1.8.9 (svn revision 222)
 * Python 3 now supported.
 * allow 'EPSG' init (as well as 'epsg'). This only worked on case-insensitive
   filesystems previously. Fixes issue 6.
 * added inverse to Hammer projection.
 * updated src/pj_mutex.c from proj4 svn to fix a threading issue on windows
   (issue 25). Windows binary installers updated (version 1.8.8-1), courtesy
   Christoph Gohlke.
 * if inputs are NaNs, return huge number (1.e30).
1.8.8 (svn revision 196)
 * add extra datum shift files, added test/test_datum.py (fixes issue 22).
   datum shifts now work correctly in transform function.
1.8.7 (svn revision 175)
 * reverted pj_init.c to old version (from proj4 4.6.1) because version in
   4.7.0 includes caching code that can cause segfaults in pyproj (issue 19).
 * added 'preserve_units' keyword to Proj.__init__ to suppress conversion
   to meters.
1.8.6 (svn revision 169)
 * now works with ms vs2008, vs2003 (fixed missing isnan).
 * updated to proj 4.7.0 (fixes a problem coexisting with pyqt).
 * allow Geod instance to be initialized using a proj4 string 
1.8.5 (svn revision 155)
 * allow Proj instance to be initialized using a proj4 string 